--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 </head>
 
 <body>
+    <!-- system 1 for adding event handler function call in button, function create in script tag -->
+    <h1 onclick="console.log('Shakib')">Hello World</h1>
+    <button onclick="console.log(7)">Click Me</button>
+    <button onclick="console.log(65)">Another</button>
+    <br>
+    <button onclick="document.body.style.backgroundColor='green'">Make Yellow</button>
+    <!-- system 2 for adding event handler function call in button, function create in script tag -->
+    <button onclick="makeRed()">Make Red</button>
+    <br>
+    <button id="makeBlue">Make Blue</button>
+    <button id="makePurple">Make Purple</button>
+    <button id="makeAqua">Make Aqua</button>
+    <button id="makeCoral">Make Coral</button>
+    <button id="makeGray">Make Gray</button>
+    <script src="js/events.js"></script>
+    <script>
+
+    </script>
 
 </body>
 
